plugins/kotlin/idea/tests/testData/gradle/highlighting/gradle8/javaLibraryPlugin/lib/build.gradle.kts.highlighting
plugins {
    `java-library`
}

repositories {
    <!HIGHLIGHTING("severity='WARNING'; descr='[DEPRECATION] 'jcenter(): MavenArtifactRepository' is deprecated. Deprecated in Java'; textAttributesKey='DEPRECATED_ATTRIBUTES'")!>jcenter<!>()
}

dependencies {
    testImplementation(libs.junit.api)
    testRuntimeOnly(libs.junit.engine)
    api(libs.commons.math3)
    implementation(libs.guava)
}

tasks.test {
    useJUnitPlatform()
}
